<resources>
    <string name="app_name">GYM Management</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">GYM</string>
    <string name="nav_header_subtitle">GYM Management System</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="export">Export Data</string>
    <string name="contact">Developer Contact</string>

    <string name="menu_home">Home</string>
    <string name="plans">Plans</string>
    <string name="user_name">Username</string>
    <string name="forget_key">Forget</string>
    <string name="loginText">Login</string>
    <string name="set_user_pass">Welcome Login Using Google Account !</string>
    <string name="password">Password</string>
    <string name="Gym_name">Gym Name</string>
    <string name="answere">Answere</string>
    <string name="next_key">Next</string>
    <string name="confirmpass">Confirm Password</string>
    <string name="newpass">New Password</string>
    <string name="change">Change</string>
    <string name="total_members">Total Members</string>
    <string name="total_active_members">Active Members</string>
    <string name="total_expires_members">Members Expires Today</string>
    <string name="add_member">Add Member</string>
    <string name="member_name">Name</string>
    <string name="member_phone">Phone</string>
    <string name="amount">Amount:</string>
    <string name="add_plan">Add Plan</string>
    <string name="plan_fee">Plan Fee</string>
    <string name="plan_details">Plan Name</string>
    <string name="plan_time">Time:</string>
    <string name="address">Address</string>
    <string name="paid">Paid</string>
    <string name="plan">Plan</string>
    <string name="members">Members</string>
    <string name="all_members">All Members</string>
    <string name="active_members">Active Members</string>
    <string name="inactive_members">Inactive Members</string>
    <string name="expire_date">Expire On</string>
    <string name="search_key"> Search Here By Phone ..</string>
    <string name="transaction">Transaction</string>
    <string name="due">Due</string>
    <string name="due_amount">Due Amount:</string>
    <string name="title_activity_due_payment">DuePayment</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="due_payment">Due Payment</string>
    <string name="pay_key">Pay</string>
    <string name="recharge">Recharge</string>
    <string name="recharge_text">Recharge</string>
    <string name="profile">Profile</string>
    <string name="developer_contact">Developer  ~ Arpit Rangi\nContact ~ 9306011724</string>
    <string name="export_instructions">Copy Gym_Management Folder in Documents from Old Device to New Device Documents Folder .\nAfter Clicking Export Data Button.\n In any problem contact developer.</string>
    <string name="title_activity_member_details">MemberDetails</string>

    <string name="member_details">Member Details</string>
    <string name="edit_key">Edit</string>
    <string name="save_key">Save</string>
    <string name="change_pass">Change Password</string>
    <string name="change_Gym">Change Gym Name</string>
    <string name="change_ques">Change Question</string>
    <string name="authority">Authenticate</string>
    <string name="verify">Verify</string>
    <string name="new_name">New Name</string>
    <string name="chnage_ques">Change</string>
    <string name="collection">Monthly Collaction</string>
</resources>