<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.arpit.gymmanagment.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_plans"
        android:name="com.arpit.gymmanagment.ui.plans.PlansFragment"
        android:label="@string/plans"
        tools:layout="@layout/fragment_plans" />
    <fragment
        android:id="@+id/nav_members"
        android:name="com.arpit.gymmanagment.ui.members.MembersFragment"
        android:label="@string/members"
        tools:layout="@layout/fragment_members" />
    <fragment
        android:id="@+id/nav_transaction"
        android:name="com.arpit.gymmanagment.ui.transaction.TransactionFragment"
        android:label="@string/transaction"
        tools:layout="@layout/fragment_transaction" />
    <fragment
        android:id="@+id/nav_due"
        android:name="com.arpit.gymmanagment.ui.due.DueFragment"
        android:label="@string/due"
        tools:layout="@layout/fragment_due" />
    <fragment
        android:id="@+id/nav_recharge"
        android:name="com.arpit.gymmanagment.ui.recharge.RechargeFragment"
        android:label="@string/recharge"
        tools:layout="@layout/fragment_recharge" />
</navigation>