<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditDetails">

    <TextView
        android:id="@+id/applicationName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/custom_orange"
        android:text="@string/member_details"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.356"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="70dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/custom_orange"
        app:layout_constraintBottom_toBottomOf="@+id/applicationName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_arrow_back_24" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="150dp"
        android:layout_height="180dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/applicationName"
        app:srcCompat="@drawable/person30" />
    <ImageButton
        android:id="@+id/pick_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/custom_orange"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:srcCompat="@drawable/baseline_camera_alt_24" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_top_margin"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/person_icon"
                android:layout_width="40dp"
                android:layout_height="45dp"
                app:srcCompat="@drawable/custom_person" />

            <EditText
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/member_name"
                android:inputType="text"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_top_margin"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/phone_icon"
                android:layout_width="40dp"
                android:layout_height="45dp"
                app:srcCompat="@drawable/phone_custom" />

            <EditText
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLength="10"
                android:ems="10"
                android:hint="@string/member_phone"
                android:inputType="phone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_top_margin"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/address_icon"
                android:layout_width="40dp"
                android:layout_height="45dp"
                app:srcCompat="@drawable/baseline_edit_note_24" />

            <EditText
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/address"
                android:inputType="text" />
        </LinearLayout>

        <Button
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_key" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>