<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MemberDetails">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/delete_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        app:backgroundTint="@color/custom_light_orange"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/baseline_delete_24" />

    <TextView
        android:id="@+id/applicationName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/custom_orange"
        android:text="@string/member_details"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.356"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="70dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/custom_orange"
        app:layout_constraintBottom_toBottomOf="@+id/applicationName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_arrow_back_24" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="150dp"
        android:layout_height="180dp"
        android:onClick="showImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/applicationName"
        app:srcCompat="@drawable/person30" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/member_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/card_textview_top_margin"
                            android:textColor="?attr/colorOnSecondary"
                            android:textSize="@dimen/member_text_size" />

                        <TextView
                            android:id="@+id/member_phone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/card_textview_top_margin"
                            android:textColor="?attr/colorOnSecondary"
                            android:textSize="@dimen/member_text_size" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/member_address"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/card_textview_top_margin"
                            android:textColor="?attr/colorOnSecondary"
                            android:textSize="@dimen/card_textview" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/card_textview_top_margin"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/plan"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/member_plan"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/card_textview_top_margin"
                            android:layout_weight="1"
                            android:textColor="?attr/colorOnSecondary"
                            android:textSize="@dimen/member_text_size" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/member_plan_fee_text_view"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/plan_fee" />

                        <TextView
                            android:id="@+id/member_due_payment"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/card_textview_top_margin"
                            android:layout_weight="1"
                            android:textColor="?attr/colorOnSecondary"
                            android:textSize="@dimen/member_text_size" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/card_textview_top_margin"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/expire_date" />

                        <TextView
                            android:id="@+id/plan_expiry_date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/card_textview_top_margin"
                            android:layout_weight="1"
                            android:textColor="?attr/colorOnSecondary"
                            android:textSize="@dimen/member_text_size" />
                    </LinearLayout>

                    <ImageButton
                        android:id="@+id/phone_call"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_marginTop="@dimen/card_textview_top_margin"
                        android:layout_weight="1"
                        android:background="?attr/colorOnPrimary"
                        android:src="@drawable/baseline_phone_24" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/editButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_key" />

            <Button
                android:id="@+id/rechargeButton1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recharge" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>